tests/lean/1956.lean.expected.out
1956.lean:1:0: error: deep recursion was detected at 'replace' (potential solution: increase stack space in your system)
