tests/lean/1956.lean
example : 1000 * 1000 = 123456 :=
rfl
